# opuspy

./: brk.toml  pyproject.toml
src/opuspy/: __init__.py  opus.py
